<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:descendantFocusability="blocksDescendants">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header"
            tools:text="#001" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="skydoves" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/teal_200"
            android:elevation="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginBottom="20dp"
            android:scaleType="center"
            android:translationZ="100dp"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/ribbonRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="21sp"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
            tools:text="24.0 KG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toTopOf="@id/weight"
            tools:text="11 M" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/white_56"
            app:layout_constraintEnd_toStartOf="@id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight"
            tools:text="Weight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/white_56"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/height" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stats_title"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/base_stats"
            android:textColor="@color/white_93"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_title" />

        <TextView
            android:id="@+id/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/hp"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_title" />

        <ProgressBar
            android:id="@+id/progress_hp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="@id/hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hp"
            app:layout_constraintTop_toTopOf="@id/hp" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/atk"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp" />

        <ProgressBar
            android:id="@+id/progress_attack"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/chuck_colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/attack" />

        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/def"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attack" />

        <ProgressBar
            android:id="@+id/progress_defense"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@id/defense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/defense" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/spd"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/defense" />

        <ProgressBar
            android:id="@+id/progress_speed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/green"
            app:layout_constraintBottom_toBottomOf="@id/speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/speed" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/exp"
            android:textColor="@color/white_70"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed" />

        <ProgressBar
            android:id="@+id/progress_exp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/chuck_status_error"
            app:layout_constraintBottom_toBottomOf="@id/exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/progress_hp"
            app:layout_constraintTop_toTopOf="@id/exp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/chuck_status_400"
            android:text="@string/add_pokemon"
            app:layout_constraintTop_toBottomOf="@id/exp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>